--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,3 +47,50 @@ jobs:
         run: |
           python manage.py migrate --noinput
           pytest -q
+
+  integration:
+    runs-on: ubuntu-latest
+    needs: test
+    services:
+      postgres:
+        image: postgres:15
+        env:
+          POSTGRES_DB: nexus
+          POSTGRES_USER: nexus
+          POSTGRES_PASSWORD: nexus
+        ports:
+          - 5432:5432
+      redis:
+        image: redis:7
+        ports:
+          - 6379:6379
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.12
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      - name: Run migrations and tests on Postgres
+        env:
+          DJANGO_SETTINGS_MODULE: backend.settings
+          POSTGRES_DB: nexus
+          POSTGRES_USER: nexus
+          POSTGRES_PASSWORD: nexus
+          POSTGRES_HOST: 127.0.0.1
+          POSTGRES_PORT: 5432
+          CELERY_BROKER_URL: redis://127.0.0.1:6379/0
+          CELERY_RESULT_BACKEND: redis://127.0.0.1:6379/0
+          DJANGO_TESTING: "0"
+        run: |
+          # Wait for Postgres to be ready
+          until pg_isready -h 127.0.0.1 -p 5432; do sleep 1; done
+          python manage.py migrate --noinput
+          pytest -q
