--- a/requirements.txt
+++ b/requirements.txt
@@ -31,6 +31,7 @@ python-decouple==3.8
 pytz==2025.2
 PyYAML==6.0.2
 redis==5.3.1
+django-redis==5.2.0
 referencing==0.36.2
 rpds-py==0.27.1
 six==1.17.0
