--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -14,6 +14,10 @@ jobs:
     permissions:
       contents: read
       packages: write
+    env:
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+      DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
 
     steps:
       - name: Checkout repository
@@ -26,26 +30,24 @@ jobs:
         uses: docker/setup-buildx-action@v2
 
       - name: Login to GHCR
-        if: secrets.GITHUB_TOKEN != ''
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          password: ${{ env.GITHUB_TOKEN }}
 
       - name: Login to Docker Hub
-        if: secrets.DOCKERHUB_USERNAME != '' && secrets.DOCKERHUB_TOKEN != ''
+        if: ${{ env.DOCKERHUB_USERNAME && env.DOCKERHUB_TOKEN }}
         uses: docker/login-action@v2
         with:
           registry: docker.io
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          username: ${{ env.DOCKERHUB_USERNAME }}
+          password: ${{ env.DOCKERHUB_TOKEN }}
 
       - name: Extract version
         id: meta
         run: |
-          # Use tag name when publishing from a release branch, otherwise use branch name
-          if [ "${{ github.ref_type }}" = "tag" ]; then
+          if [ "${GITHUB_REF_TYPE}" = "tag" ]; then
             echo "tag=${GITHUB_REF##*/}" >> $GITHUB_OUTPUT
           else
             echo "tag=${GITHUB_SHA::8}" >> $GITHUB_OUTPUT
@@ -65,7 +67,7 @@ jobs:
             PYTHONUNBUFFERED=1
 
       - name: Build and push (Docker Hub)
-        if: secrets.DOCKERHUB_USERNAME != '' && secrets.DOCKERHUB_TOKEN != ''
+        if: ${{ env.DOCKERHUB_USERNAME && env.DOCKERHUB_TOKEN }}
         uses: docker/build-push-action@v4
         with:
           context: .
@@ -73,7 +75,7 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           tags: |
-            ${{ secrets.DOCKERHUB_USERNAME }}/alx-project-nexus:${{ steps.meta.outputs.tag }}
-            ${{ secrets.DOCKERHUB_USERNAME }}/alx-project-nexus:latest
+            ${{ env.DOCKERHUB_USERNAME }}/alx-project-nexus:${{ steps.meta.outputs.tag }}
+            ${{ env.DOCKERHUB_USERNAME }}/alx-project-nexus:latest
           build-args: |
             PYTHONUNBUFFERED=1
