--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,81 +1,67 @@
-name: Build and publish Docker image
+name: CI
 
 on:
   push:
-    branches:
-      - main
-      - 'releases/**'
-  workflow_dispatch: {}
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
-  build-and-push:
-    name: Build and push multi-platform image
+  test:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
+    services:
+      redis:
+        image: redis:7
+        ports:
+          - 6379:6379
+    strategy:
+      matrix:
+        python-version: [3.12]
     env:
-      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-      DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
+      DJANGO_SETTINGS_MODULE: backend.settings
+      DJANGO_TESTING: "1"
+      # Add email and other secrets here
+      EMAIL_HOST_USER: ${{ secrets.EMAIL_HOST_USER }}
+      EMAIL_HOST_PASSWORD: ${{ secrets.EMAIL_HOST_PASSWORD }}
+      POSTGRES_DB: nexus
+      POSTGRES_USER: nexus
+      POSTGRES_PASSWORD: nexus
+      POSTGRES_HOST: 127.0.0.1
+      POSTGRES_PORT: 5432
+      CELERY_BROKER_URL: redis://127.0.0.1:6379/0
+      CELERY_RESULT_BACKEND: redis://127.0.0.1:6379/0
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: Login to GHCR
-        uses: docker/login-action@v2
+      - name: Set up Python
+        uses: actions/setup-python@v4
         with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ env.GITHUB_TOKEN }}
+          python-version: ${{ matrix.python-version }}
 
-      - name: Login to Docker Hub
-        if: ${{ env.DOCKERHUB_USERNAME && env.DOCKERHUB_TOKEN }}
-        uses: docker/login-action@v2
+      - name: Cache pip
+        uses: actions/cache@v4
         with:
-          registry: docker.io
-          username: ${{ env.DOCKERHUB_USERNAME }}
-          password: ${{ env.DOCKERHUB_TOKEN }}
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
 
-      - name: Extract version
-        id: meta
+      - name: Install dependencies
         run: |
-          if [ "${GITHUB_REF_TYPE}" = "tag" ]; then
-            echo "tag=${GITHUB_REF##*/}" >> $GITHUB_OUTPUT
-          else
-            echo "tag=${GITHUB_SHA::8}" >> $GITHUB_OUTPUT
-          fi
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
-      - name: Build and push (GHCR)
-        uses: docker/build-push-action@v4
-        with:
-          context: .
-          file: ./Dockerfile
-          platforms: linux/amd64,linux/arm64
-          push: true
-          tags: |
-            ghcr.io/${{ github.repository }}:${{ steps.meta.outputs.tag }}
-            ghcr.io/${{ github.repository }}:latest
-          build-args: |
-            PYTHONUNBUFFERED=1
+      - name: Install PostgreSQL client
+        run: sudo apt-get update && sudo apt-get install -y postgresql-client
 
-      - name: Build and push (Docker Hub)
-        if: ${{ env.DOCKERHUB_USERNAME && env.DOCKERHUB_TOKEN }}
-        uses: docker/build-push-action@v4
-        with:
-          context: .
-          file: ./Dockerfile
-          platforms: linux/amd64,linux/arm64
-          push: true
-          tags: |
-            ${{ env.DOCKERHUB_USERNAME }}/alx-project-nexus:${{ steps.meta.outputs.tag }}
-            ${{ env.DOCKERHUB_USERNAME }}/alx-project-nexus:latest
-          build-args: |
-            PYTHONUNBUFFERED=1
+      - name: Wait for Redis
+        run: |
+          until redis-cli ping; do sleep 1; done
+
+      - name: Run migrations and tests (pytest)
+        run: |
+          # Wait for Postgres to be ready
+          until pg_isready -h 127.0.0.1 -p 5432; do sleep 1; done
+          python manage.py migrate --noinput
+          pytest -q
