--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,11 +14,15 @@ jobs:
         image: redis:7
         ports:
           - 6379:6379
-
     strategy:
       matrix:
         python-version: [3.12]
-
+    env:
+      DJANGO_SETTINGS_MODULE: backend.settings
+      DJANGO_TESTING: "1"
+      EMAIL_HOST_USER: ${{ secrets.EMAIL_HOST_USER }}
+      EMAIL_HOST_PASSWORD: ${{ secrets.EMAIL_HOST_PASSWORD }}
+      SECRET_KEY: ${{ secrets.SECRET_KEY }}
     steps:
       - uses: actions/checkout@v4
 
@@ -41,9 +45,6 @@ jobs:
           pip install -r requirements.txt
 
       - name: Run migrations and tests (pytest)
-        env:
-          DJANGO_SETTINGS_MODULE: backend.settings
-          DJANGO_TESTING: "1"
         run: |
           python manage.py migrate --noinput
           pytest -q
@@ -56,15 +57,27 @@ jobs:
         image: postgres:15
         env:
           POSTGRES_DB: nexus
-          POSTGRES_USER: nexus
-          POSTGRES_PASSWORD: nexus
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: Ogwaa123
         ports:
           - 5432:5432
       redis:
         image: redis:7
         ports:
           - 6379:6379
-
+    env:
+      DJANGO_SETTINGS_MODULE: backend.settings
+      DJANGO_TESTING: "0"
+      POSTGRES_DB: nexus
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: Ogwaa123
+      POSTGRES_HOST: localhost
+      POSTGRES_PORT: 5432
+      CELERY_BROKER_URL: redis://127.0.0.1:6379/0
+      CELERY_RESULT_BACKEND: redis://127.0.0.1:6379/0
+      EMAIL_HOST_USER: ${{ secrets.EMAIL_HOST_USER }}
+      EMAIL_HOST_PASSWORD: ${{ secrets.EMAIL_HOST_PASSWORD }}
+      SECRET_KEY: ${{ secrets.SECRET_KEY }}
     steps:
       - uses: actions/checkout@v4
 
@@ -73,22 +86,15 @@ jobs:
         with:
           python-version: 3.12
 
+      - name: Install PostgreSQL client
+        run: sudo apt-get update && sudo apt-get install -y postgresql-client
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
       - name: Run migrations and tests on Postgres
-        env:
-          DJANGO_SETTINGS_MODULE: backend.settings
-          POSTGRES_DB: nexus
-          POSTGRES_USER: nexus
-          POSTGRES_PASSWORD: nexus
-          POSTGRES_HOST: 127.0.0.1
-          POSTGRES_PORT: 5432
-          CELERY_BROKER_URL: redis://127.0.0.1:6379/0
-          CELERY_RESULT_BACKEND: redis://127.0.0.1:6379/0
-          DJANGO_TESTING: "0"
         run: |
           # Wait for Postgres to be ready
           until pg_isready -h 127.0.0.1 -p 5432; do sleep 1; done
