--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,12 +25,10 @@ jobs:
       SECRET_KEY: ${{ secrets.SECRET_KEY }}
     steps:
       - uses: actions/checkout@v4
-
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-
       - name: Cache pip
         uses: actions/cache@v4
         with:
@@ -38,13 +36,13 @@ jobs:
           key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
           restore-keys: |
             ${{ runner.os }}-pip-
-
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-
-      - name: Run migrations and tests (pytest)
+      - name: Wait for Redis
+        run: until redis-cli ping; do sleep 1; done
+      - name: Run migrations and tests
         run: |
           python manage.py migrate --noinput
           pytest -q
@@ -68,6 +66,9 @@ jobs:
     env:
       DJANGO_SETTINGS_MODULE: backend.settings
       DJANGO_TESTING: "0"
+      EMAIL_HOST_USER: ${{ secrets.EMAIL_HOST_USER }}
+      EMAIL_HOST_PASSWORD: ${{ secrets.EMAIL_HOST_PASSWORD }}
+      SECRET_KEY: ${{ secrets.SECRET_KEY }}
       POSTGRES_DB: nexus
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: Ogwaa123
@@ -75,28 +76,20 @@ jobs:
       POSTGRES_PORT: 5432
       CELERY_BROKER_URL: redis://127.0.0.1:6379/0
       CELERY_RESULT_BACKEND: redis://127.0.0.1:6379/0
-      EMAIL_HOST_USER: ${{ secrets.EMAIL_HOST_USER }}
-      EMAIL_HOST_PASSWORD: ${{ secrets.EMAIL_HOST_PASSWORD }}
-      SECRET_KEY: ${{ secrets.SECRET_KEY }}
     steps:
       - uses: actions/checkout@v4
-
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: 3.12
-
       - name: Install PostgreSQL client
         run: sudo apt-get update && sudo apt-get install -y postgresql-client
-
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-
-      - name: Run migrations and tests on Postgres
+      - name: Run migrations and tests
         run: |
-          # Wait for Postgres to be ready
           until pg_isready -h 127.0.0.1 -p 5432; do sleep 1; done
           python manage.py migrate --noinput
           pytest -q
