feat: auth via phone/email, fix serializers and URLs, swagger docs; add filters/permissions; SMTP email; CI workflows hardened with secrets; GHCR build; Celery eager in CI; test-safe email path; docs and .dockerignore

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,13 +40,16 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
+      - name: Install Redis CLI
+        run: sudo apt-get update && sudo apt-get install -y redis-tools
+
       - name: Wait for Redis
         run: until redis-cli ping; do sleep 1; done
 
-      - name: Run migrations and tests
+      - name: Run migrations and tests (Django test runner)
         run: |
           python manage.py migrate --noinput
-          pytest -q
+          python manage.py test -v 2
 
   integration:
     runs-on: ubuntu-latest
@@ -57,7 +60,7 @@ jobs:
         env:
           POSTGRES_DB: nexus
           POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: Ogwaa123
+          POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
         ports:
           - 5432:5432
       redis:
@@ -68,7 +71,7 @@ jobs:
       DJANGO_SETTINGS_MODULE: backend.settings  # Use base settings, NOT production
       POSTGRES_DB: nexus
       POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: Ogwaa123
+      POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
       POSTGRES_HOST: localhost
       POSTGRES_PORT: 5432
       CELERY_BROKER_URL: redis://127.0.0.1:6379/0
@@ -93,4 +96,4 @@ jobs:
         run: |
           until pg_isready -h 127.0.0.1 -p 5432; do sleep 1; done
           python manage.py migrate --noinput
-          pytest -q
+          python manage.py test -v 2
